--- a/src/BaroquenMelody.App.Components/Shared/InstrumentConfigurationCard.razor
+++ b/src/BaroquenMelody.App.Components/Shared/InstrumentConfigurationCard.razor
@@ -16,7 +16,8 @@
                                          AnchorOrigin="InstrumentFilterAnchorOrigin"
                                          TransformOrigin="InstrumentFilterTransformOrigin"
                                          Icon="@Icons.Material.TwoTone.FilterAlt"
-                                         Label="Instrument">
+                                         Label="Instrument"
+                                         IsDisabled="IsDisabled">
                     <PopoverContent>
                         <MudText Align="Align.Center" Class="mt-n3" Typo="Typo.h6">Filter Instruments</MudText>
                         <MudPaper Class="d-flex flex-column overflow-x-auto mt-1 ml-n4 mr-n4 mb-n4" Outlined="true" Height="33vh">
@@ -47,7 +48,8 @@
                              Step="1"
                              MinDistance="CompositionConfiguration.MinInstrumentRange"
                              LabelText="@LowestPitchNote.ToString()"
-                             UpperLabelText="@HighestPitchNote.ToString()"/>
+                             UpperLabelText="@HighestPitchNote.ToString()"
+                             Disabled="IsDisabled" />
             </MudItem>
             <MudItem xs="12" sm="4" md="3" lg="2" xl="2" xxl="2">
                 <MudSelect T="int"
@@ -56,7 +58,8 @@
                            Variant="Variant.Outlined"
                            AdornmentIcon="@Icons.Material.Outlined.ArrowCircleDown"
                            Adornment="Adornment.End"
-                           AdornmentColor="Color.Secondary">
+                           AdornmentColor="Color.Secondary"
+                           Disabled="IsDisabled">
                     @foreach (var noteIndex in LowestPitchNoteIndices)
                     {
                         <MudSelectItem Value="noteIndex">@CompositionConfigurationState.Value.Notes[noteIndex]</MudSelectItem>
@@ -70,7 +73,8 @@
                            Variant="Variant.Outlined"
                            AdornmentIcon="@Icons.Material.Outlined.ArrowCircleUp"
                            Adornment="Adornment.End"
-                           AdornmentColor="Color.Secondary">
+                           AdornmentColor="Color.Secondary"
+                           Disabled="IsDisabled">
                     @foreach (var noteIndex in HighestPitchNoteIndices)
                     {
                         <MudSelectItem Value="noteIndex">@CompositionConfigurationState.Value.Notes[noteIndex]</MudSelectItem>
@@ -92,6 +96,8 @@
     private GeneralMidi2Program MidiInstrument => InstrumentConfigurationState.Value[Instrument]?.MidiProgram ?? GeneralMidi2Program.AcousticGrandPiano;
 
     private bool IsEnabled => InstrumentConfigurationState.Value[Instrument]?.IsEnabled ?? false;
+
+    private bool IsDisabled => !IsEnabled;
 
     private const int SliderMin = 0;
 
