--- a/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationCard.razor
+++ b/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationCard.razor
@@ -12,7 +12,8 @@
                                          ValueChanged="HandleProbabilityChange"
                                          ValueProvider="() => Probability"
                                          Min="0"
-                                         Max="100">
+                                         Max="100"
+                                         IsDisabled="IsDisabled">
                     <PopoverContent>
                         <MudText>The probability of the ornamentation being applied to the composition.</MudText>
                     </PopoverContent>
@@ -34,7 +35,8 @@
                            Max="100"
                            Step="1"
                            ValueLabelFormat="0'%'"
-                           Culture="CultureInfo.CurrentCulture"/>
+                           Culture="CultureInfo.CurrentCulture"
+                           Disabled="IsDisabled"/>
             </MudItem>
         </MudGrid>
     </MudCardContent>
@@ -47,6 +49,8 @@
     private int Probability => OrnamentationConfigurationState.Value[OrnamentationType]?.Probability ?? 0;
 
     private bool IsEnabled => OrnamentationConfigurationState.Value[OrnamentationType]?.IsEnabled ?? false;
+
+    private bool IsDisabled => !IsEnabled;
 
     private void HandleProbabilityChange(int value) => Dispatcher.Dispatch(new UpdateCompositionOrnamentationConfiguration(OrnamentationType, IsEnabled, value));
 
