--- a/src/BaroquenMelody.App.Components/_Imports.razor
+++ b/src/BaroquenMelody.App.Components/_Imports.razor
@@ -36,6 +36,8 @@
 @using Melanchall.DryWetMidi.Standards
 @using MudBlazor
 @using MudExtensions
+@using BaroquenMelody.Library.Infrastructure.Configuration.Enums
+@using BaroquenMelody.Library.Infrastructure.Configuration.Enums.Extensions
 
 @inject IState<CompositionOrnamentationConfigurationState> OrnamentationConfigurationState
 @inject IState<CompositionRuleConfigurationState> CompositionRuleConfigurationState
