--- a/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationCard.razor
+++ b/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationCard.razor
@@ -2,7 +2,7 @@
 
 <MudCard Class="rounded mb-3 mx-3" Elevation="3" Outlined="true">
     <CardHeaderSwitch HeaderText="@(OrnamentationType.ToSpaceSeparatedString())"
-                      IsEnabled="@IsEnabled"
+                      ConfigurationStatus="Status"
                       ValueChanged="HandleIsEnabledChange"/>
     <MudCardContent>
         <MudGrid>
@@ -48,11 +48,11 @@
 
     private int Probability => OrnamentationConfigurationState.Value[OrnamentationType]?.Probability ?? 0;
 
-    private bool IsEnabled => OrnamentationConfigurationState.Value[OrnamentationType]?.IsEnabled ?? false;
+    private ConfigurationStatus Status => OrnamentationConfigurationState.Value[OrnamentationType]?.Status ?? ConfigurationStatus.Enabled;
 
-    private bool IsDisabled => !IsEnabled;
+    private bool IsDisabled => Status is ConfigurationStatus.Disabled or ConfigurationStatus.Locked;
 
-    private void HandleProbabilityChange(int value) => Dispatcher.Dispatch(new UpdateCompositionOrnamentationConfiguration(OrnamentationType, IsEnabled, value));
+    private void HandleProbabilityChange(int value) => Dispatcher.Dispatch(new UpdateCompositionOrnamentationConfiguration(OrnamentationType, Status, value));
 
-    private void HandleIsEnabledChange(bool value) => Dispatcher.Dispatch(new UpdateCompositionOrnamentationConfiguration(OrnamentationType, value, Probability));
+    private void HandleIsEnabledChange(ConfigurationStatus status) => Dispatcher.Dispatch(new UpdateCompositionOrnamentationConfiguration(OrnamentationType, status, Probability));
 }
